Fix label and contrast error in language selector (#815)
* Fix label and contrast error in language selector

* Bump patch version

--- a/common/abstracts/_variables.scss
+++ b/common/abstracts/_variables.scss
@@ -58,7 +58,7 @@ $outline-on-dark-background: 3px solid $orange;
 $outline-on-light-background: 3px solid $burgundy;
 
 $checkbox-color: $black;
-$checkbox-disabled-color: #9c9c99;
+$checkbox-disabled-color: #767674;
 $checkbox-shadow-color: $orange;
 $checkmark-color: $white;
 
