--- a/h5p-bildetema/src/components/Checkbox/Checkbox.module.scss
+++ b/h5p-bildetema/src/components/Checkbox/Checkbox.module.scss
@@ -43,3 +43,7 @@
   height: 1.75rem;
   width: 1.75rem;
 }
+
+.visuallyHidden {
+  @include visually-hidden;
+}
